Feat:Ahora se puede agregar replicas a la base de datos

--- a/UI-Base-De-Datos/src/app/Pages/AMB_Page/AMB_Page.component.html
+++ b/UI-Base-De-Datos/src/app/Pages/AMB_Page/AMB_Page.component.html
@@ -2,10 +2,8 @@
 <app-Header [title]="'PAGINA ABM'"></app-Header>
 
   <div class="commentaryContainer">
-    <app-Card-Commentary></app-Card-Commentary>
-    <app-Card-Commentary></app-Card-Commentary>
-    <app-Card-Commentary></app-Card-Commentary>
-    <app-Card-Commentary></app-Card-Commentary>
-    <app-Card-Commentary></app-Card-Commentary>
+    <div *ngFor="let comentario of commentList">
+        <app-Card-Commentary [comentario]="comentario"></app-Card-Commentary>
+    </div>
   </div>
 
