--- a/UI-Base-De-Datos/src/app/Shared/Card-Reply/Card-Reply.component.css
+++ b/UI-Base-De-Datos/src/app/Shared/Card-Reply/Card-Reply.component.css
@@ -41,3 +41,12 @@
 .respuestas > li{
     padding: 0px 20px 0px 20px;
 }
+
+.iconoClicable {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.botonBorrar{
+    color: brown;
+}
