--- a/UI-Base-De-Datos/src/app/Shared/Content-Card/Content-Card.component.css
+++ b/UI-Base-De-Datos/src/app/Shared/Content-Card/Content-Card.component.css
@@ -1,13 +1,14 @@
 .contentCard{
     display: grid;
-    grid-template-columns: 2fr,1fr,2fr,1fr;
+    grid-template-columns: 1fr fit-content(30%);
     grid-template-rows: 1fr,3fr;
     background-color: var(--colorContraste);
-    min-width: 70vw;
+    width: 70vw;
     box-sizing: border-box;
     border-radius: 10px;
     border-style: solid;
     font-family: var(--fuenteSecundaria);
+    margin-bottom: 5px;
 }
 
 .label {
