--- a/UI-Base-De-Datos/src/app/Pages/AMB_Page/AMB_Page.component.html
+++ b/UI-Base-De-Datos/src/app/Pages/AMB_Page/AMB_Page.component.html
@@ -1,5 +1,5 @@
 
-<app-Header [title]="'PAGINA ABM'"></app-Header>
+<app-Header [title]="'PAGINA ABM'" [url]="'/Contents'"></app-Header>
 
   <div class="commentaryContainer">
     <div *ngFor="let comentario of commentList">
