--- a/UI-Base-De-Datos/src/app/Pages/Content-Page/Content-Page.component.html
+++ b/UI-Base-De-Datos/src/app/Pages/Content-Page/Content-Page.component.html
@@ -1,4 +1,4 @@
-<app-Header [title]="'PAGINA CONTENIDOS'"></app-Header>
+<app-Header [title]="'PAGINA CONTENIDOS'" [url]="'/index'"></app-Header>
 
 <div class="conteinerCardContenido">
 
