--- a/UI-Base-De-Datos/src/app/Pages/Main_Page/Main_Page.component.html
+++ b/UI-Base-De-Datos/src/app/Pages/Main_Page/Main_Page.component.html
@@ -1,4 +1,4 @@
-<app-Header [title]="'PAGINA PRINCIPAL'"></app-Header>
+<app-Header [title]="'PAGINA PRINCIPAL'" [show]="false"></app-Header>
 
 <div class="containerCardMenu">
 
