--- a/UI-Base-De-Datos/src/app/Pages/Report_Page/Report_Page.component.html
+++ b/UI-Base-De-Datos/src/app/Pages/Report_Page/Report_Page.component.html
@@ -1,4 +1,4 @@
 
-<app-Header [title]="'REPORTERIA'"></app-Header>
+<app-Header [title]="'REPORTERIA'" [url]="'/index'"></app-Header>
 
 <app-Report-Table></app-Report-Table>
