--- a/UI-Base-De-Datos/src/app/Shared/Header/Header.component.html
+++ b/UI-Base-De-Datos/src/app/Shared/Header/Header.component.html
@@ -1,4 +1,7 @@
 
   <header class="header">
+    <a *ngIf="show" class="containerBotonVolver" href="{{url}}">
+      <button class="botonVolver">Volver</button>
+    </a>
     {{title}}
   </header>
