--- a/UI-Base-De-Datos/src/app/Shared/Report-Table/Report-Table.component.html
+++ b/UI-Base-De-Datos/src/app/Shared/Report-Table/Report-Table.component.html
@@ -30,7 +30,7 @@
       </li>
       <li>
         <a href="/ABM_Page/{{item.idArchivo}}">
-          {{item.Titulo}}
+          {{item.Titulo}}<fa-icon class="icono" [icon]="faLink"></fa-icon>
         </a>
       </li>
     </div>
